# basic_pitch

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  build-android-onnx-libs.sh  build-android.sh  build-ios-onnx-libs.sh  build-ios-sim-onnx-libs.sh  build-ios.sh  build-onnx-libs-android.sh  build-onnx-libs-ios-sim.sh  build.rs
.github/workflows/: build-android.yaml  build-ios.yaml  build-macos.yaml
cpp/: .clang-format  CMakeLists.txt  compile-android.sh
cpp/source/: constants.h  features.cpp  features.h  lib.cpp  neural_pitch.h  notes.cpp  notes.h  pitch_cnn.cpp  pitch_cnn.h  pitch_detector.cpp  pitch_detector.h
examples/: generated_sine.rs
src/: detector.rs
